Doc/force-app/main/default/objects/ILT_Attendee__c/ILT_Attendee__c.object-meta.xml
<CustomObject>
    <label>ILT Attendee</label>
    <nameField>
        <displayFormat>ILTA-{00000}</displayFormat>
        <label>ILT Attendee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>