Doc/force-app/main/default/objects/ILT_Attendee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Person__r.Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>