Doc/force-app/main/default/objects/ILT_Attendee__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ILT Attendees</relationshipLabel>
    <relationshipName>ILT_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>