Doc/force-app/main/default/objects/ILT_Attendee__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Cancelled - Full Refund</fullName>
            </value>
            <value>
                <fullName>Cancelled - Partial Refund</fullName>
            </value>
            <value>
                <fullName>Free Seat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>